syntax = "proto3";

package msg;

option optimize_for = LITE_RUNTIME;



//============================================================================================
//                 Client <==> GateSVR
//============================================================================================
// 网关登录
message LoginGateAck
{
	enum MsgId { None=0; Id = 100001; }
	int32 code = 1;
}

